Fix for horizontal scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -72,6 +72,7 @@ p {
 
 .form-col {
     width: 42.375rem;
+    max-width: 100%;
 }
 
 .article {
